--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
@@ -22,15 +22,12 @@ jobs:
         node-version:  '13.10'
     
     - name: Install dependencies
-      working-directory: ./nk-hotel-app
-      run: npm install
+      run: yarn install
 
     - name: Run the tests and generate coverage report
-      working-directory: ./nk-hotel-app
       run: npm test -- --passWithNoTests
     
     - name: Run build
-      working-directory: ./nk-hotel-app
       run: npm build
   
 
