--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version:  '13.10'
+        node-version:  '^12.13.0'
     
     - name: Install dependencies
       run: yarn install
