--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -63,7 +63,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        file: ../Dockerfile
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/nkhotel:latest
     
